--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "google-auth-oauthlib (>=1.2.1,<2.0.0)",
     "google-auth-httplib2 (>=0.2.0,<0.3.0)",
     "google-api-python-client (>=2.161.0,<3.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "pytz (>=2025.1,<2026.0)"
 ]
 
 
